Create swagger documentation get todo by id and default error response
